tests/transpiler/x/clj/string_compare.clj
;; Generated by Mochi transpiler on 2025-07-19T06:44:50Z
(ns main)
(defn -main [] (println (< "a" "b")) (println (<= "a" "a")) (println (> "b" "a")) (println (>= "b" "b")))
(-main)
